# devsecops_lab2_example

./: .dockerignore  .gitignore  .safety-project.ini  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
src/: app.py
src/templates/: index.html
tests/: test_app.py
